--- a/css/topNav.css
+++ b/css/topNav.css
@@ -2,12 +2,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 16px 24px 0 24px;
+  margin: 16px 24px;
 }
 
 @media (min-width: 768px){
   .topNav {
     flex-direction: column;
+    margin-bottom: 0;
   }
 }
 
